@@ -1,5 +1,12 @@
 2007-05-24  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_as_sprite.cpp: applied the patch from Francois Guibert,
+	fixed gotoAndPlay & gotoAndStop bug, Flash tries to convert STRING to NUMBER,
+	if the conversion is OK then Flash uses this NUMBER as target_frame,
+	else uses STRING as label of target_frame
+
+2007-05-24  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_text.cpp: divided into .cpp & .h files
 	* gameswf/gameswf_as_classes/(a lot of files): assert(fn.this_ptr) is added
 	* gameswf/gameswf_sprite.*,
